<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registracion">

    <!-- FrameLayout envolviendo todo el contenido -->
    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <!-- Parte superior - Icono de la app u otros iconos -->
        <LinearLayout
            android:id="@+id/top_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="0dp"
            android:background="?attr/colorPrimary">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:contentDescription="App Icon"
                android:src="@drawable/ic_logo" />
        </LinearLayout>

        <!-- Parte central - Campos de registro -->
        <LinearLayout
            android:id="@+id/center_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registracion_name_label"
                android:fontFamily="@font/tipo1"
                android:padding="8dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registracion_name_hint"
                android:padding="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registracion_lastname_label"
                android:fontFamily="@font/tipo1"
                android:padding="8dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registracion_lastname_hint"
                android:padding="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registracion_email_label"
                android:fontFamily="@font/tipo1"
                android:padding="8dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registracion_email_hint"
                android:padding="16dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registracion_password_label"
                android:fontFamily="@font/tipo1"
                android:padding="8dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registracion_password_hint"
                android:padding="16dp"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registracion_confirm_password_label"
                android:fontFamily="@font/tipo1"
                android:padding="8dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registracion_confirm_password_hint"
                android:padding="16dp"
                android:inputType="textPassword" />

            <!-- Parte inferior - Botón de registro -->
            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:fontFamily="@font/tipo1"
                android:padding="16dp"
                android:text="@string/registracion_register_button" />
        </LinearLayout>


    </FrameLayout>
</RelativeLayout>
