<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarPerfilFragment">

    <!-- Parte central - Contenedor principal -->
    <FrameLayout
        android:id="@+id/modificar_section"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="?attr/colorPrimary">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Campo Nombre -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registracion_name_label"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/tipo1"
                    android:textAppearance="?attr/textAppearanceBody1" />
                <EditText
                    android:id="@+id/modificar_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/registracion_name_hint"
                    android:padding="12dp" />

                <!-- Campo Apellido -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registracion_lastname_label"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/tipo1"
                    android:textAppearance="?attr/textAppearanceBody1" />
                <EditText
                    android:id="@+id/modificar_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/registracion_lastname_hint"
                    android:padding="12dp" />

                <!-- Campo Email -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/tipo1"
                    android:textAppearance="?attr/textAppearanceBody1" />
                <EditText
                    android:id="@+id/modificar_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/registracion_email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <!-- Campo Contraseña -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registracion_password_label"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/tipo1"
                    android:textAppearance="?attr/textAppearanceBody1" />
                <EditText
                    android:id="@+id/modificar_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/registracion_password_hint"
                    android:inputType="textPassword"
                    android:padding="12dp" />

                <!-- Campo Repetir Contraseña -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registracion_password_label"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/tipo1"
                    android:textAppearance="?attr/textAppearanceBody1" />
                <EditText
                    android:id="@+id/modificar_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/registracion_confirm_password_hint"
                    android:inputType="textPassword"
                    android:padding="12dp" />

                <!-- Botón de editar -->
                <Button
                    android:id="@+id/modificar_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="?attr/colorSecondaryVariant"
                    android:fontFamily="@font/tipo1"
                    android:text="@string/editar" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</RelativeLayout>
