<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Parte superior - Icono de la app u otros iconos -->

    <!-- Parte central - Pantalla cambiante -->
    <FrameLayout
        android:id="@+id/middle_section"
        android:layout_width="match_parent"
        android:layout_height="898dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="#B0B0B0">

        <LinearLayout
            android:layout_width="293dp"
            android:layout_height="419dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tipo1"
                android:text="@string/buscarLista_Buscar_pista"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/tipo3"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:layout_width="293dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dia"
                    android:layout_width="139dp"
                    android:layout_height="39dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:fontFamily="@font/tipo1"
                    android:gravity="center"
                    android:text="@string/buscarLista_fecha"
                    android:textSize="30dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="true"
                    android:contentDescription="calendario"
                    android:tint="#00000000"
                    android:translationX="5dp"
                    app:backgroundTintMode="@android:color/transparent"
                    app:elevation="0dp"
                    app:fabCustomSize="85dp"
                    app:fabSize="normal"
                    app:maxImageSize="80dp"
                    app:rippleColor="#00000000"
                    app:srcCompat="@drawable/calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:weightSum="2">

                <!-- Botón Buscar -->
                <Button
                    android:id="@+id/buscarListar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="?attr/colorSecondaryVariant"
                    android:fontFamily="@font/tipo1"
                    android:text="@string/buscarLista_buscar" />

                <!-- Botón Crear -->
                <Button
                    android:id="@+id/crearListar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="?attr/colorSecondaryVariant"
                    android:fontFamily="@font/tipo1"
                    android:text="@string/crear_lista" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <!-- Parte inferior - Barra de navegación -->

</RelativeLayout>
